# Coffee-Machine

./: .gitignore  LICENCE  pyproject.toml  setup.cfg
coffee_machine/: catalog.py  catalog_builder.py  drink.py  exceptions.py  input_handler.py
coffee_machine/electrum/: __init__.py  currencies.py  currency.py  currency_helper.py  currency_loader.py
coffee_machine/utils/: __init__.py  assert_utils.py  file_utils.py  helper_utils.py  input_utils.py  str_utils.py  validators.py
