[build-system]
requires = ["setuptools>=69.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-machine"
version = "0.1.0"
dependencies = []
requires-python = ">=3.11.6"
authors = [{ name = "vfm-sb", email = "vfm-sb@proton.me" }]
description = "A Simple Coffee Machine Application"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["coffee machine", "vending machine"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
